# mnist

./: .gitignore  Dockerfile  README.md  ml-work-cronjob  pyproject.toml  run.sh
note/: Untitled.ipynb  mnist.ipynb  mnist984.h5  mnist_predict.ipynb
src/mnist/: db.py  main.py  pr.sh  worker.py  worker.py.b
tests/: test_worker.py
