[project]
name = "mnist"
version = "0.6.2"
description = "Default template for PDM package"
authors = [
    {name = "EstherCho-7", email = "dkgkqm777@gmail.com"},
]
dependencies = [
    "fastapi>=0.114.1",
    "uvicorn[standard]>=0.30.6",
    "python-multipart>=0.0.9",
    "PyMySql>=1.1.1",
    "pytz>=2024.2",
    "jigeum>=1.0.2",
    "requests>=2.32.3",
]

requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true


[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
]
[tool.pytest.ini_options]
pythonpath="src"

[project.scripts]
ml-worker='mnist.worker:run'
